--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -218,94 +218,94 @@
     <article>
       <div class="project-broadcast quote">
 
-        <!-- <h3><a href="companion-app-beta/"><font class="color">Companion App &ndash; Beta</font><font class="desktop"> &#47; <i>Technology</i></font></a></h3>
+        <!-- <h3><a href="companion-app-beta/"><font class="color">Companion App &ndash; Beta</font><font class="desktop"> &#47;&nbsp;<i>Technology</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="companion-app-augmented-reality-kit/"><font class="color">Augmented Reality Kit</font><font class="desktop"> &#47; <i>Technology</i></font></a></h3>
+        <!-- <h3><a href="companion-app-augmented-reality-kit/"><font class="color">Augmented Reality Kit</font><font class="desktop"> &#47;&nbsp;<i>Technology</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="making-of-ella-4/"><font class="color">Making of Ella Ch&nbsp;4: Visual Effects</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <!-- <h3><a href="making-of-ella-4/"><font class="color">Making of Ella Ch&nbsp;4: Visual Effects</font><font class="desktop"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="elephant-conservation-angola/"><font class="color">Elephant Conservation in Angola</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="elephant-conservation-angola/"><font class="color">Elephant Conservation in Angola</font><font class="desktop"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <!-- <h3><a href="elephant-conservation-kavango/"><font class="color">Reconnaissance in Kavango</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <!-- <h3><a href="elephant-conservation-kavango/"><font class="color">Reconnaissance in Kavango</font><font class="desktop"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="elephant-conservation-zambezi/"><font class="color">Elephant Conservation in Zambezi</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <!-- <h3><a href="elephant-conservation-zambezi/"><font class="color">Elephant Conservation in Zambezi</font><font class="desktop"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="elephant-conservation-namibia/"><font class="color">Elephant Conservation in Namibia</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <!-- <h3><a href="elephant-conservation-namibia/"><font class="color">Elephant Conservation in Namibia</font><font class="desktop"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="elephant-conservation-botswana/"><font class="color">Elephant Conservation in Botswana</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="elephant-conservation-botswana/"><font class="color">Elephant Conservation in Botswana</font><font class="desktop"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="wildlife-documentary-2/"><font class="color">Wildlife Documentary &ndash; Lights</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="wildlife-documentary-2/"><font class="color">Wildlife Documentary &ndash; Lights</font><font class="desktop"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-amboseli/"><font class="color">Elephant Conservation in Amboseli</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="elephant-conservation-amboseli/"><font class="color">Elephant Conservation in Amboseli</font><font class="desktop"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-nairobi/"><font class="color">Elephant Conservation in Nairobi</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="elephant-conservation-nairobi/"><font class="color">Elephant Conservation in Nairobi</font><font class="desktop"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="wildlife-documentary-big-tuskers/"><font class="color">Big Tuskers Documentary</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="wildlife-documentary-big-tuskers/"><font class="color">Big Tuskers Documentary</font><font class="desktop"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="wildlife-documentary/"><font class="color">Wildlife Documentary &ndash; Action</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="wildlife-documentary/"><font class="color">Wildlife Documentary &ndash; Action</font><font class="desktop"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="history-of-elephants-charter/"><font class="color">A History of Elephants &ndash; Charter</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="history-of-elephants-charter/"><font class="color">A History of Elephants &ndash; Charter</font><font class="desktop"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="history-of-elephants-anatomy/"><font class="color">A History of Elephants &ndash; Anatomy</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="history-of-elephants-anatomy/"><font class="color">A History of Elephants &ndash; Anatomy</font><font class="desktop"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="wildlife-documentary-lens/"><font class="color">Wildlife Documentary &ndash; Cameras</font><font class="desktop"> &#47; <i>Technology</i></font></a></h3>
+        <h3><a href="wildlife-documentary-lens/"><font class="color">Wildlife Documentary &ndash; Cameras</font><font class="desktop"> &#47;&nbsp;<i>Technology</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="history-of-elephants/"><font class="color">A History of Elephants &ndash; Preface</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="history-of-elephants/"><font class="color">A History of Elephants &ndash; Preface</font><font class="desktop"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <!-- <h3><a href="making-of-ella-3/"><font class="color">Making of Ella Ch&nbsp;3: Elephant</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <!-- <h3><a href="making-of-ella-3/"><font class="color">Making of Ella Ch&nbsp;3: Elephant</font><font class="desktop"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="book-of-ella-4/"><font class="color">Book of Ella Ch&nbsp;4: Color</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="book-of-ella-4/"><font class="color">Book of Ella Ch&nbsp;4: Color</font><font class="desktop"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-kenya/"><font class="color">Elephant Conservation in Kenya</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="elephant-conservation-kenya/"><font class="color">Elephant Conservation in Kenya</font><font class="desktop"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <!-- <h3><a href="making-of-ella-2/"><font class="color">Making of Ella Ch&nbsp;2: Scene</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <!-- <h3><a href="making-of-ella-2/"><font class="color">Making of Ella Ch&nbsp;2: Scene</font><font class="desktop"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="history-of-elephants-ivory/"><font class="color">A History of Elephants &ndash; Ivory</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="history-of-elephants-ivory/"><font class="color">A History of Elephants &ndash; Ivory</font><font class="desktop"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella-3/"><font class="color">Book of Ella Ch&nbsp;3: Comic Panel</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="book-of-ella-3/"><font class="color">Book of Ella Ch&nbsp;3: Comic Panel</font><font class="desktop"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella-2/"><font class="color">Book of Ella Ch&nbsp;2: Comics</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="book-of-ella-2/"><font class="color">Book of Ella Ch&nbsp;2: Comics</font><font class="desktop"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="book-of-ella/"><font class="color">Book of Ella Ch&nbsp;1: Cover Story</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="book-of-ella/"><font class="color">Book of Ella Ch&nbsp;1: Cover Story</font><font class="desktop"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="reference-art-2/"><font class="color">Reference Art &ndash; Imagery</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="reference-art-2/"><font class="color">Reference Art &ndash; Imagery</font><font class="desktop"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="reference-art/"><font class="color">Reference Art &ndash; History</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="reference-art/"><font class="color">Reference Art &ndash; History</font><font class="desktop"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="elephant-conservation-africa/"><font class="color">Elephant Conservation in Africa</font><font class="desktop"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="elephant-conservation-africa/"><font class="color">Elephant Conservation in Africa</font><font class="desktop"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="companion-app-augmented-reality/"><font class="color">Augmented Reality Application</font><font class="desktop"> &#47; <i>Technology</i></font></a></h3>
+        <h3><a href="companion-app-augmented-reality/"><font class="color">Augmented Reality Application</font><font class="desktop"> &#47;&nbsp;<i>Technology</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="making-of-ella/"><font class="color">Making of Ella Ch&nbsp;1: Source</font><font class="desktop"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="making-of-ella/"><font class="color">Making of Ella Ch&nbsp;1: Source</font><font class="desktop"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
       </div>
