--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -258,31 +258,34 @@
     <article>
       <div class="quote">
 
-        <!-- <h3><a href="tiger-conservation-primorye/"><font class="color">Tiger Conservation &ndash; Primorye</font><font class="toggle-form-full"> &#47; <i>Nature</i></font></a></h3>
+        <!-- <h3><a href="tiger-conservation-primorye/"><font class="color">Tiger Conservation &ndash; Primorye</font><font class="toggle-form-full"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="history-of-forests-rewilding/"><font class="color">History of Forests &ndash; Rewilding</font><font class="toggle-form-full"> &#47; <i>Nature</i></font></a></h3>
+        <!-- <h3><a href="making-of-amba/"><font class="color">Making of Amba</font><font class="toggle-form-full"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="history-of-forests-tigers/"><font class="color">A History of the Forest &ndash; Trees</font><font class="toggle-form-full"> &#47; <i>Nature</i></font></a></h3>
+        <!-- <h3><a href="history-of-forests-rewilding/"><font class="color">History of Forests &ndash; Rewilding</font><font class="toggle-form-full"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <!-- <h3><a href="the-beginning-of-printing/"><font class="color">The Beginning of Printing</font><font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
+        <!-- <h3><a href="history-of-forests-tigers/"><font class="color">A History of the Forest &ndash; Trees</font><font class="toggle-form-full"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre> -->
 
-        <h3><a href="the-beginning-of-exhibiting/"><font class="color">The Beginning of Exhibiting</font><font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
+        <!-- <h3><a href="the-beginning-of-printing/"><font class="color">The Beginning of Printing</font><font class="toggle-form-full"> &#47;&nbsp;<i>Art</i></font></a></h3>
+        <pre class="thin"></pre> -->
+
+        <h3><a href="the-beginning-of-exhibiting/"><font class="color">The Beginning of Exhibiting</font><font class="toggle-form-full"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="history-of-forests-trees/"><font class="color">A History of the Forest &ndash; Trees</font><font class="toggle-form-full"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="history-of-forests-trees/"><font class="color">A History of the Forest &ndash; Trees</font><font class="toggle-form-full"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="tiger-conservation-siberia/"><font class="color">Tiger Conservation in Siberia</font><font class="toggle-form-full"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="tiger-conservation-siberia/"><font class="color">Tiger Conservation in Siberia</font><font class="toggle-form-full"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="the-beginning-of-chapter-two/"><font class="color">The Beginning of Chapter Two</font><font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="the-beginning-of-chapter-two/"><font class="color">The Beginning of Chapter Two</font><font class="toggle-form-full"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="the-beginning-of-painting/"><font class="color">The Beginning of Painting</font><font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="the-beginning-of-painting/"><font class="color">The Beginning of Painting</font><font class="toggle-form-full"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
       </div>
