--- a/scene/zero/index.html
+++ b/scene/zero/index.html
@@ -120,10 +120,10 @@
     <article>
       <div class="quote">
 
-        <h3><a href="northern-white-rhinoceros/">Northern White Rhinoceros<font class="toggle-form-full"> &#47; <i>Nature</i></font></a></h3>
+        <h3><a href="northern-white-rhinoceros/">Northern White Rhinoceros<font class="toggle-form-full"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
-        <h3><a href="../../url/git/danealeksander-art-international-baccalaureate/">Silver Studio Art Show<font class="toggle-form-full"> &#47; <i>Art</i></font></a></h3>
+        <h3><a href="../../url/git/danealeksander-art-international-baccalaureate/">Silver Studio Art Show<font class="toggle-form-full"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
       </div>
