--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <pre class="thin"></pre>
 
-        <p class="linebreak"><a href="societas/princeps/" title="Animat Habitat princeps.">Princeps</a></p>
+        <p class="linebreak"><a href="champion/" title="Animat Habitat champions.">Champions</a></p>
         <p class="lineend small">Habitat conservation champions.<font class="fr">&nbsp;&#92;&nbsp;Champions de conservation de la nature.</font></p>
 
         <pre class="thin"></pre>
