--- a/support/index.html
+++ b/support/index.html
@@ -71,11 +71,10 @@
         <p>Animat Habitat &ndash; Europe</p>
         <p>Animat Habitat &ndash; Oceania<font class="fr">&nbsp;&#92;&nbsp;Oc&eacute;anie</font></p>
 
-        <h5 class="letterhead title">Society<font class="fr">&nbsp;&#92;&nbsp;Soci&eacute;t&eacute;</font></h5>
+        <h5 class="letterhead title">Members<font class="fr">&nbsp;&#92;&nbsp;Membres</font></h5>
         <p>Animat Habitat <a href="../patron/" title="Animat Habitat patronage.">Patron</a></p>
-        <p>Animat Habitat <a href="../societas/" title="Animat Habitat societ&amacr;s.">Societ&amacr;s</a><font class="fr">&nbsp;&#92;&nbsp;Manuel des membres</font></p>
-        <p>Animat Habitat Societ&amacr;s &ndash; <a href="../societas/concilium/" title="Animat Habitat concilium.">Concilium</a></p>
-        <p>Animat Habitat Societ&amacr;s &ndash; <a href="../societas/princeps/" title="Animat Habitat princeps.">Princeps</a></p>
+        <p>Animat Habitat <a href="../champion/" title="Animat Habitat champions.">Champions</a></p>
+        <p>Animat Habitat <a href="../societas/" title="Animat Habitat societ&amacr;s.">Member Handbook</a><font class="fr">&nbsp;&#92;&nbsp;Manuel des membres</font></p>
 
         <h5 class="letterhead title">Terms<font class="fr">&nbsp;&#92;&nbsp;Conditions</font></h5>
         <p>Animat Habitat <a href="../c/privacy-policy/" title="Animat Habitat privacy policy.">Privacy Policy</a><font class="fr">&nbsp;&#92;&nbsp;Politique de confidentialit&eacute;</font></p>
