--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
     <div class="quote">
       <p class="small">Address any feedback to the secretariat at Animat Habitat [<a href="mailto:support@animathabitat.org" title="Address of the secretariat at Animat Habitat." target="_blank" rel="noopener">animathabitat</a>].<font class="fr">&nbsp;&#92;&nbsp;Envoyez-nous vos commentaires.</font></p>
 
-      <p class="linebreak small">Animat Habitat <a href="//animathabitat.org/support/" title="Animat Habitat support.">Sitemap</a>.<font class="fr">&nbsp;&#92;&nbsp;Plan du site Web.</font></p>
+      <p class="linebreak small">Animat Habitat <a href="//animathabitat.org/index/" title="Animat Habitat official website index.">Site Index</a>.<font class="fr">&nbsp;&#92;&nbsp;Plan du site Web.</font></p>
 
     </div>
 
