--- a/app/beta/confirmation/0/index.html
+++ b/app/beta/confirmation/0/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat beta. Exit. &ndash;&nbsp;Sortie.</title>
+  <title>Animat Habitat app. Beta &ndash;&nbsp;B&ecirc;ta. Exit. &ndash;&nbsp;Sortie.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../../inc/css/dark.light.unicorn.css" />
@@ -37,7 +37,7 @@
       <div>
         <h3 class="letterhead">Thanks for your feedback.<font class="fr">&nbsp;&#92;&nbsp;Merci pour vos commentaires.</font></h3>
 
-        <p class="linebreak"><a href="../../" title="Animat Habitat societ&amacr;s. Registration. &ndash;&nbsp;Enregistrement.">Re-register</a>.<font class="fr">&nbsp;&#92;&nbsp;Re-enregistrer.</font></p>
+        <p class="linebreak"><a href="../../" title="Animat Habitat cast member registration.">Re-register</a>.<font class="fr">&nbsp;&#92;&nbsp;Re-enregistrer.</font></p>
 
       </div>
 
