--- a/rss/confirmation/index.html
+++ b/rss/confirmation/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat societ&amacr;s. Confirm. &ndash;&nbsp;Confirmer.</title>
+  <title>Animat Habitat confirmation e-mail.</title>
 
   <style>
     html { background-color: #333; }
@@ -19,9 +19,9 @@
   </style>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
-  <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
+  <link rel="stylesheet" href="../../inc/css/dark.light.unicorn.css" />
 
-  <link rel="icon" href="../../../inc/ico/animat.mark.1.1.72.light.png" />
+  <link rel="icon" href="../../inc/ico/animat.mark.1.1.72.light.png" />
 
 </head>
 
@@ -29,9 +29,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb"><a href="../../" title="Animat Habitat societ&amacr;s.">Societ&amacr;s</a></li>
-      <li class="crumb scene"><a><i>Confirmation</i></a></li>
+      <li class="crumb logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb active"><a>Cast Member<font class="fr">&#92;&nbsp;Membre de lat distribution</font></a></li>
+      <li class="crumb active"><a><i>Confirmation</i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
@@ -56,7 +56,7 @@
 
       <p class="small linebreak">You may close this page at any time.<font class="fr">&nbsp;&#92;&nbsp;Vous pouvez fermer cette page &agrave; tout moment.</font></p>
 
-      <p class="small linebreak">Exit through the <a href="../../../boutique/" title="Animat Habitat boutique.">Boutique</a>.<font class="fr">&nbsp;&#92;&nbsp;Sortir par la boutique.</font></p>
+      <p class="small linebreak">Exit through the <a href="../../boutique/" title="Animat Habitat boutique.">Boutique</a>.<font class="fr">&nbsp;&#92;&nbsp;Sortir par la boutique.</font></p>
 
     </div>
 
