--- a/index/index.html
+++ b/index/index.html
@@ -74,7 +74,7 @@
         <h5 class="letterhead title">Members<font class="fr">&nbsp;&#92;&nbsp;Membres</font></h5>
         <p>Animat Habitat <a href="../patron/" title="Animat Habitat patronage.">Patron</a></p>
         <p>Animat Habitat <a href="../champion/" title="Animat Habitat champions.">Champions</a></p>
-        <p>Animat Habitat <a href="../societas/" title="Animat Habitat societ&amacr;s.">Member Handbook</a><font class="fr">&nbsp;&#92;&nbsp;Manuel des membres</font></p>
+        <p>Animat Habitat <a href="../s/" title="Animat Habitat member handbook.">Member Handbook</a><font class="fr">&nbsp;&#92;&nbsp;Manuel des membres</font></p>
 
         <h5 class="letterhead title">Terms<font class="fr">&nbsp;&#92;&nbsp;Conditions</font></h5>
         <p>Animat Habitat <a href="../c/privacy-policy/" title="Animat Habitat privacy policy.">Privacy Policy</a><font class="fr">&nbsp;&#92;&nbsp;Politique de confidentialit&eacute;</font></p>
