--- a/rss/confirmation/0/index.html
+++ b/rss/confirmation/0/index.html
@@ -11,12 +11,12 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat societ&amacr;s. Exit. &ndash;&nbsp;Sortie.</title>
+  <title>Animat Habitat&hellip; Exit. &ndash;&nbsp;Sortie.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
-  <link rel="stylesheet" href="../../../../inc/css/dark.light.unicorn.css" />
+  <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
 
-  <link rel="icon" href="../../../../inc/ico/animat.mark.1.1.72.light.png" />
+  <link rel="icon" href="../../../inc/ico/animat.mark.1.1.72.light.png" />
 
 </head>
 
@@ -24,9 +24,8 @@
 
   <nav>
     <ul class="page single">
-      <li class="crumb logo"><a href="../../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb"><a href="../../" title="Animat Habitat societ&amacr;s.">Societ&amacr;s</a></li>
-      <li class="crumb scene"><a><i>Exit<font class="toggle-form-full"> &ndash; Sortie</font></i></a></li>
+      <li class="crumb logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb active"><a><i>Exit<font class="toggle-form-full"> &ndash; Sortie</font></i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
@@ -37,7 +36,7 @@
       <div>
         <h3 class="letterhead">Thanks for journeying this far.<font class="fr">&nbsp;&#92;&nbsp;Merci d'avoir voyag&eacute; aussi loin.</font></h3>
 
-        <p class="linebreak"><a href="../../" title="Animat Habitat societ&amacr;s. Registration. &ndash;&nbsp;Enregistrement.">Re-register</a>.<font class="fr">&nbsp;&#92;&nbsp;Re-enregistrer.</font></p>
+        <p class="linebreak"><a href="../../" title="Animat Habitat cast member registration.">Re-register</a>.<font class="fr">&nbsp;&#92;&nbsp;Re-enregistrer.</font></p>
 
       </div>
 
@@ -46,7 +45,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Exit through the <a href="../../../../boutique/" title="Animat Habitat boutique.">Boutique</a>.<font class="fr">&nbsp;&#92;&nbsp;Sortir par la boutique.</font></p>
+      <p class="small">Exit through the <a href="../../../boutique/" title="Animat Habitat boutique.">Boutique</a>.<font class="fr">&nbsp;&#92;&nbsp;Sortir par la boutique.</font></p>
 
     </div>
 
