--- a/rss/index.html
+++ b/rss/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat societ&amacr;s. Registration. &ndash;&nbsp;Enregistrement.</title>
+  <title>Animat Habitat cast member registration. &ndash;&nbsp;Inscription des membres de la distribution.</title>
 
   <style>
     html { background-color: #333; }
@@ -19,9 +19,9 @@
   </style>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
-  <link rel="stylesheet" href="../../inc/css/dark.light.unicorn.css" />
+  <link rel="stylesheet" href="../inc/css/dark.light.unicorn.css" />
 
-  <link rel="icon" href="../../inc/ico/animat.mark.1.1.72.light.png" />
+  <link rel="icon" href="../inc/ico/animat.mark.1.1.72.light.png" />
 
 </head>
 
@@ -29,10 +29,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb"><a href="../" title="Animat Habitat societ&amacr;s.">Societ&amacr;s</a></li>
+      <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb active"><a><i>Cast Member<font class="fr">&#92;&nbsp;Membre de lat distribution</font></i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
-      <li class="crumb scene"><a><i>&hellip;</i></a></li>
     </ul>
   </nav>
 
