--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
 
         <pre class="thin"></pre>
 
+        <p class="linebreak"><a href="champion/" title="Animat Habitat champions.">Champions</a></p>
+        <p class="lineend small">Habitat conservation champions.<font class="fr">&nbsp;&#92;&nbsp;Champions de conservation de la nature.</font></p>
+
+        <pre class="thin"></pre>
+
         <p class="linebreak"><a href="conservation/" title="Animat Habitat conservation.">Conservation</a></p>
         <p class="lineend small">Habitat conservation projects.<font class="fr">&nbsp;&#92;&nbsp;Les projets de conservation de la nature.</font></p>
 
@@ -124,11 +129,6 @@
 
         <p class="linebreak"><a href="patron/" title="Animat Habitat patronage.">Patron</a></p>
         <p class="lineend small">Support independent art at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Soutenir art ind&eacute;pendant chez Animat Habitat.</font></p>
-
-        <pre class="thin"></pre>
-
-        <p class="linebreak"><a href="champion/" title="Animat Habitat champions.">Champions</a></p>
-        <p class="lineend small">Habitat conservation champions.<font class="fr">&nbsp;&#92;&nbsp;Champions de conservation de la nature.</font></p>
 
         <pre class="thin"></pre>
 
@@ -160,7 +160,7 @@
 
         <!-- The protected areas of this website not served on GitHub are hosted in Canada powered by one-hundred percent renewable energy. <a href="//whc.ca/green-hosting/" title="WHC / Green Web Hosting in Canada" target="_blank" rel="noopener">Green web hosting in Canada</a>. -->
 
-        <p class="linebreak small">Animat Habitat <a href="index/" title="Animat Habitat official website index.">Site Index</a>.<font class="fr">&nbsp;&#92;&nbsp;Plan du site Web.</font></p>
+        <p class="linebreak small">Animat Habitat <a href="index/" title="Animat Habitat official website index.">Site Index</a>.<font class="fr">&nbsp;&#92;&nbsp;Index du site Web.</font></p>
 
         <p class="linebreak small">Incorporated in Canada as not-for-profit organization #942675-2. &ldquo;Animat Habitat&rdquo; is an unregistered trademark that is protected for the purpose of corporate identity. Documents of the organization are archived and classified in the Animat Habitat <a href="s/" title="Animat Habitat member handbook.">Member Handbook</a>.<font class="fr">&nbsp;&#92;&nbsp;Incorpor&eacute;e au Canada comme organisation &agrave; but non lucratif &mdash; le nom de l'organisation est une marque non enregistr&eacute;e qui est prot&eacute;g&eacute;e aux fins de l'identit&eacute; corporatif. Les documents d'organisation sont archiv&eacute;s et class&eacute;s dans le manuel des membres.</font></p>
 
