--- a/index/index.html
+++ b/index/index.html
@@ -6,11 +6,11 @@
   <meta name="google" content="notranslate" />
 
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Animat Habitat sitemap.&nbsp;&#92;&nbsp;Plan du site Web officiel Animat Habitat." />
+  <meta name="description" content="Animat Habitat official website index.&nbsp;&#92;&nbsp;Index du site Web officiel Animat Habitat." />
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat sitemap. &ndash;&nbsp;Plan du site Web officiel Animat Habitat.</title>
+  <title>Animat Habitat sitemap. &ndash;&nbsp;Index du site Web officiel Animat Habitat.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../inc/css/dark.light.unicorn.css" />
@@ -24,7 +24,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb active"><a><i>Support</i></a></li>
+      <li class="crumb active"><a><i>Index</i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
@@ -34,7 +34,7 @@
 
       <div>
         <h4 class="letterhead thin">Animat Habitat</h4>
-        <h2>Sitemap<font class="fr">&nbsp;&#92;&nbsp;Plan du site Web</font></h2>
+        <h2>Site Index<font class="fr">&nbsp;&#92;&nbsp;du site Web</font></h2>
         <h5>animathabitat.ca &middot; animathabitat.com &middot; animathabitat.org</h5>
 
       </div>
@@ -72,9 +72,9 @@
         <p>Animat Habitat &ndash; Oceania<font class="fr">&nbsp;&#92;&nbsp;Oc&eacute;anie</font></p>
 
         <h5 class="letterhead title">Members<font class="fr">&nbsp;&#92;&nbsp;Membres</font></h5>
-        <p>Animat Habitat <a href="../patron/" title="Animat Habitat patronage.">Patron</a></p>
-        <p>Animat Habitat <a href="../champion/" title="Animat Habitat champions.">Champions</a></p>
+        <p>Animat Habitat <a href="../champion/" title="Animat Habitat champions.">Champion</a></p>
         <p>Animat Habitat <a href="../s/" title="Animat Habitat member handbook.">Member Handbook</a><font class="fr">&nbsp;&#92;&nbsp;Manuel des membres</font></p>
+        <p>Animat Habitat <a href="../patron/" title="Animat Habitat patronage.">Patron of the Arts</a></p>
 
         <h5 class="letterhead title">Terms<font class="fr">&nbsp;&#92;&nbsp;Conditions</font></h5>
         <p>Animat Habitat <a href="../c/privacy-policy/" title="Animat Habitat privacy policy.">Privacy Policy</a><font class="fr">&nbsp;&#92;&nbsp;Politique de confidentialit&eacute;</font></p>
