--- a/patron/index.html
+++ b/patron/index.html
@@ -79,15 +79,61 @@
 
       </div>
 
-      <div class="quote">
-        <p class="small"><sup>1</sup> Patron donation &ndash; including Debit or Credit card information &ndash; is processed with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Votre don &ndash; incluant information de carte de d&eacute;bit ou de cr&eacute;dit &ndash; est accept&eacute; avec PayPal.</font></p>
+      <div>
+        <h3 class="linebreak">Official Councils<font class="fr">&nbsp;&#92;&nbsp;Conseils officiels</font></h3>
+        <p>Support independent art at Animat Habitat as a member of a council.<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat en tant que membre d'un conseil.</font></p>
+
+      </div>
+
+      <div class="clear diptych">
+
+        <div class="clear-top">
+          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-57U63714MU8341144MNDAT2A" title="PayPal CA$250 / Periwinkle Blue Council at Animat Habitat." rel="noopener"><button>Periwinkle <font class="small">CA$250 /&nbsp;yr<sup>&nbsp;[1]</sup></font></button></a>
+          <p class="linebreak">As a Periwinkle Council member, your donation will help fund research and development at Animat Habitat, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;En tant que membre du Conseil Pervenche, votre don contribuera au financement de la recherche et du d&eacute;veloppement chez Animat Habitat, et vous recevrez&nbsp;:</font></p>
+
+          <p class="linebreak"><i>All patron benefits plus&hellip;</i><font class="fr">&nbsp;&#92;&nbsp;<i>Tous les avantages des patrons plus&hellip;</i></font></p>
+
+          <ul class="lineend square">
+            <li class="linebreak">Voice on the Periwinkle Council.<font class="fr"><br>&#92;&nbsp;Voix sur le Conseil Pervenche.</font></li>
+            <li>Access to Periwinkle Blue screenings.<font class="fr"><br>&#92;&nbsp;Acc&egrave;s aux s&eacute;ances Bleu Pervenche.</font></li>
+          </ul>
+
+          <pre class="thin"></pre>
+
+          <!-- <p class="linebreak small"><i>This council is for anyone terribly partial to the periwinkle blue&hellip;</i><font class="fr">&nbsp;&#92;&nbsp;<i>Ce conseil est pour ceux qui sont terriblement partiels au bleu pervenche&hellip;</i></font></p> -->
+
+          <p class="linebreak small">Members of the Periwinkle Council have an opportunity to submit nominees for the Annual Nature Documentary Award, to access Periwinkle Blue screenings of select nominees, and to vote for a best film or series or mini-series of the year.<font class="fr">&nbsp;&#92;&nbsp;Les membres du Conseil Pervenche ont la possibilit&eacute; de soumettre des nomin&eacute;s pour la revue annuelle des documentaire sur la nature, d'acc&eacute;der &agrave; des projections priv&eacute;es de certains nomin&eacute;s et de voter pour le meilleur film, s&eacute;rie ou mini-s&eacute;rie de l'ann&eacute;e.</font></p>
+
+        </div>
+
+        <div class="clear-top">
+          <a onclick="silver_council();" title="Silver Council"><button>Silver <font class="small">CA$2,500 /&nbsp;yr</font></button></a>
+
+          <div class="clear-bottom" id="silver-council">
+
+            <p>For secure wiring instructions, please contact the account office at Animat Habitat [<a href="mailto:account@animathabitat.org?subject=Silver%C2%A0Council" title="Address of the account office at Animat Habitat." target="_blank" rel="noopener">account&ndash;animathabitat.org</a>]. <font class="fr">&#92;&nbsp;Pour obtenir des instructions de virement s&eacute;curis&eacute;, veuillez contacter le bureau de compte chez Animat Habitat.</font></p>
+
+          </div>
+
+          <p class="linebreak">As a Silver Council member, your donation will help fund exhibitions and publications at Animat Habitat, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;En tant que membre du Conseil Silver, votre don contribuera au financement des expositions et des publications chez Animat Habitat, et vous recevrez&nbsp;:</font></p>
+
+          <p class="linebreak"><i>All patron benefits plus&hellip;</i><font class="fr">&nbsp;&#92;&nbsp;<i>Tous les avantages des patrons plus&hellip;</i></font></p>
+
+          <ul class="lineend square">
+            <li class="linebreak">Voice on the Silver Council.<font class="fr"><br>&#92;&nbsp;Voix sur le Conseil Silver.</font></li>
+            <li>Access to the Member Handbook.<font class="fr"><br>&#92;&nbsp;Acc&egrave;s au manuel du membre.</font></li>
+            <li>Patron credit in publications. (Optional)<font class="fr"><br>&#92;&nbsp;Mention d'honneur dans les publications. (&nbsp;Optionnel&nbsp;)</font></li>
+          </ul>
+
+          <pre class="thin"></pre>
+
+          <p class="linebreak small">Members of the Silver Council have an opportunity to submit resolutions for the Board of Directors, to access archived documents of the organization, and to vote for resolutions at annual Meetings of the Members.<font class="fr">&nbsp;&#92;&nbsp;Les membres du Conseil Silver ont la possibilit&eacute; de soumettre des r&eacute;solutions au conseil d'administration, d'acc&eacute;der aux documents archiv&eacute;s et de voter pour les r&eacute;solutions lors des assembl&eacute;es annuelles des membres.</font></p>
+
+        </div>
 
       </div>
 
       <div>
-        <h3 class="linebreak">Official Councils <font class="fr">&nbsp;&#92;&nbsp;Conseils officiels</font></h3>
-        <p>Support independent art at Animat Habitat as member of a <a href="../societas/concilium/" title="Animat Habitat / Council" rel="noopener">Council</a>.<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat comme membre d'un conseil.</font></p>
-
         <h3 class="linebreak"><font>Official Selections<font class="fr">&nbsp;&#92;&nbsp;S&eacute;lections officielles</font></font></h3>
         <p>Animat Habitat creates art for the conservation of endangered species and their natural habitats. As a not-for-profit organization in Canada, it is our honour to support a small selection of wildlife conservation projects. As a small art studio, it is not in our interest to overextend commitments. Instead, we believe in on-going partnerships to support the long term sustainability of these select projects. These are the wildlife conservation projects in association with scenes at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Animat Habitat cr&eacute;e de l'art pour la conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels. En tant qu'organisation &agrave; but non lucratif, nous avons honneur de soutenir une petite s&eacute;lection de projets de conservation de la nature. En tant que petit studio d'art au Canada, nous n'avons pas int&eacute;r&ecirc;t &agrave; d&eacute;passer nos engagements. Au lieu de cela, nous croyons aux partenariats continus pour soutenir la durabilit&eacute; &agrave; long terme de ces projets s&eacute;lectionn&eacute;s. Ce sont les projets de conservation de la nature en association avec les sc&egrave;nes chez Animat Habitat.</font></p>
 
@@ -162,8 +208,20 @@
   </section>
 
   <footer class="single">
-    <div class="quote">
-      <p class="small">Address any questions about donations to the account office at Animat Habitat [<a href="mailto:account@animathabitat.org" title="Address of the account office at Animat Habitat." target="_blank" rel="noopener">account–animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Adressez toute question concernant les dons au bureau de compte chez Animat Habitat.</font></p>
+    <div class="quote" id="footnotes">
+      <p class="small"><sup>1</sup> Patron donation &ndash; including Debit or Credit card information &ndash; is processed with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Votre don &ndash; incluant information de carte de d&eacute;bit ou de cr&eacute;dit &ndash; est accept&eacute; avec PayPal.</font></p>
+      <!-- <p class="small"><sup>2</sup> Patron benefits:<font class="fr">&nbsp;&#92;&nbsp;Les avantages des patrons&nbsp;:</font></p>
+      <div class="clear-top">
+        <ul class="small square">
+          <li>Certificate of Membership. (Annual)<font class="fr">&nbsp;&#92;&nbsp;Certificat d'adhésion. (&nbsp;Annuel&nbsp;)</font></li>
+          <li>Letters from the Editor and President. (Optional)<font class="fr">&nbsp;&#92;&nbsp;Lettres de l'éditeur et du pr&eacute;sident. (&nbsp;Optionnel&nbsp;)</font></li>
+          <li>Early access to beta programs, to exhibition passes and to limited edition prints.<font class="fr">&nbsp;&#92;&nbsp;Acc&egrave;s anticip&eacute; aux programmes b&ecirc;ta, aux billets d'exposition et aux tirages en &eacute;dition limit&eacute;e.</font></li>
+
+        </ul>
+
+      </div> -->
+
+      <p class="linebreak small">Please address any question about donations to the account office at Animat Habitat [<a href="mailto:account@animathabitat.org" title="Address of the account office at Animat Habitat." target="_blank" rel="noopener">account–animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Adressez toute question concernant les dons au bureau de compte chez Animat Habitat.</font></p>
       <p class="linebreak small">Thank you for your support.<font class="fr">&nbsp;&#92;&nbsp;Merci pour votre soutien.</font></p>
 
     </div>
