--- a/champion/index.html
+++ b/champion/index.html
@@ -2,7 +2,7 @@
 <html lang="en, fr">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <meta http-equiv="Cont/ent-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self';" />
   <meta name="google" content="notranslate" />
 
   <meta name="author" content="Dane Aleksander" />
@@ -73,7 +73,11 @@
 
         </ul>
 
-        <pre class="thin"></pre>
+      </div>
+
+      <pre class="thin"></pre>
+
+      <div class="clear text-center">
 
         <ul class="letterhead letterend">
 
@@ -91,7 +95,11 @@
 
         </ul>
 
-        <pre class="thin"></pre>
+      </div>
+
+      <pre class="thin"></pre>
+
+      <div class="clear text-center">
 
         <ul class="letterhead letterend">
 
@@ -113,7 +121,11 @@
 
         </ul>
 
-        <pre class="thin"></pre>
+      </div>
+
+      <pre class="thin"></pre>
+
+      <div class="clear text-center">
 
         <ul class="letterhead letterend">
 
@@ -134,7 +146,11 @@
 
         </ul>
 
-        <pre class="thin"></pre>
+      </div>
+
+      <pre class="thin"></pre>
+
+      <div class="clear text-center">
 
         <ul class="letterhead letterend">
 
@@ -156,7 +172,11 @@
 
         </ul>
 
-        <pre class="thin"></pre>
+      </div>
+
+      <pre class="thin"></pre>
+
+      <div class="clear text-center">
 
         <ul class="letterhead letterend">
 
@@ -187,7 +207,11 @@
 
         </ul>
 
-        <pre class="thin"></pre>
+      </div>
+
+      <pre class="thin"></pre>
+
+      <div class="clear text-center">
 
         <ul class="letterhead letterend">
 
@@ -206,7 +230,11 @@
 
         </ul>
 
-        <pre class="thin"></pre>
+      </div>
+
+      <pre class="thin"></pre>
+
+      <div class="clear text-center">
 
         <ul class="letterhead letterend">
 
@@ -225,7 +253,11 @@
 
         </ul>
 
-        <pre class="thin"></pre>
+      </div>
+
+      <pre class="thin"></pre>
+
+      <div class="clear text-center">
 
         <ul class="letterhead letterend">
 
