--- a/app/beta/confirmation/1/index.html
+++ b/app/beta/confirmation/1/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat app. Beta &ndash;&nbsp;B&ecirc;ta. Welcome. &ndash;&nbsp;Bienvenue.</title>
+  <title>Animat Habitat beta. Welcome. &ndash;&nbsp;Bienvenue.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../../inc/css/dark.light.unicorn.css" />
@@ -43,9 +43,9 @@
         <p class="linebreak">Beta: Companion App <a href="../../../" title="Beta: Companion App Feedback Form">Feedback Form</a><font class="fr">&nbsp;&#92;&nbsp;Formulaire de commentaires sur l'application compagnon b&ecirc;ta.</font></p>
 
         <h5 class="linebreak">Join as a patron.<font class="fr">&nbsp;&#92;&nbsp;Rejoignez-nous en tant que patron.</font></h5>
-        <p>Receive a certificate of membership as an annual patron of the studio or as a member of the Periwinkle Blue or Silver council at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Recevez un certificat d'adh&eacute;sion annuel en tant que patron du studio ou en tant que membre du Conseil Bleu Pervenche ou Conseil Silver chez Animat Habitat.</font></p>
+        <p>Receive a certificate of membership as an annual patron of the scenes in wildlife art or as a member of the Periwinkle Blue or Silver council at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Recevez un certificat d'adh&eacute;sion annuel en tant que patron des sc&egrave;nes d'art de la nature ou en tant que membre du Conseil Bleu Pervenche ou Conseil Silver chez Animat Habitat.</font></p>
 
-        <p class="linebreak">Animat Habitat <a href="../../../../patron/" title="Animat Habitat patronage.">Patron</a></p>
+        <p class="linebreak">Animat Habitat <a href="../../../../patron/" title="Animat Habitat patrons.">Patron</a></p>
 
       </div>
 
