--- a/app/beta/ios-ipados/index.html
+++ b/app/beta/ios-ipados/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat app. Beta &ndash;&nbsp;B&ecirc;ta. Registration. &ndash;&nbsp;Inscription.</title>
+  <title>Animat Habitat beta. Registration. &ndash;&nbsp;Inscription.</title>
 
   <style>
     html { background-color: #333; }
