--- a/index/index.html
+++ b/index/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat sitemap. &ndash;&nbsp;Index du site Web officiel Animat Habitat.</title>
+  <title>Animat Habitat index.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../inc/css/dark.light.unicorn.css" />
@@ -74,7 +74,7 @@
         <h5 class="letterhead title">Members<font class="fr">&nbsp;&#92;&nbsp;Membres</font></h5>
         <p>Animat Habitat <a href="../champion/" title="Animat Habitat champions.">Champion</a></p>
         <p>Animat Habitat <a href="../s/" title="Animat Habitat member handbook.">Member Handbook</a><font class="fr">&nbsp;&#92;&nbsp;Manuel des membres</font></p>
-        <p>Animat Habitat <a href="../patron/" title="Animat Habitat patronage.">Patron of the Arts</a></p>
+        <p>Animat Habitat <a href="../patron/" title="Animat Habitat patrons.">Patron</a></p>
 
         <h5 class="letterhead title">Terms<font class="fr">&nbsp;&#92;&nbsp;Conditions</font></h5>
         <p>Animat Habitat <a href="../c/privacy-policy/" title="Animat Habitat privacy policy.">Privacy Policy</a><font class="fr">&nbsp;&#92;&nbsp;Politique de confidentialit&eacute;</font></p>
