--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="white elephant, elephant animation, elephant comic book, elephant app, okavango delta" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.</title>
+  <title>Animat Habitat scene one.</title>
 
   <style>
     html { background-color: #222; }
