--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="white tiger, tiger painting, tiger app, tiger art, putorana plateau" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.</title>
+  <title>Animat Habitat scene two.</title>
 
   <style>
     html { background-color: #111; }
