--- a/scene/zero/index.html
+++ b/scene/zero/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="white rhino, white rhinoceros art, rhino painting, dane aleksander, ngorongoro" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat scene zero. &ndash;&nbsp;sc&egrave;ne z&egrave;ro.</title>
+  <title>Animat Habitat scene zero.</title>
 
   <style>
     html { background-color: #333; }
