--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <!-- <li class="crumb btn color-two"><a href="scene/two/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">II</a></li> -->
       <!-- <li class="crumb btn color-three"><a href="scene/three/" title="Animat Habitat scene three. &ndash;&nbsp;sc&egrave;ne trois.">III</a></li> -->
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
-      <li class="right btn"><a href="patron/" title="Animat Habitat patronage.">Patron</a></li>
+      <li class="right btn"><a href="patron/" title="Animat Habitat patrons.">Patron</a></li>
       <li class="right btn"><a href="boutique/" title="Animat Habitat boutique.">Boutique</a></li>
     </ul>
   </nav>
@@ -127,7 +127,7 @@
 
         <pre class="thin"></pre>
 
-        <p class="linebreak"><a href="patron/" title="Animat Habitat patronage.">Patron</a></p>
+        <p class="linebreak"><a href="patron/" title="Animat Habitat patrons.">Patron</a></p>
         <p class="lineend small">Support independent art at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Soutenir art ind&eacute;pendant chez Animat Habitat.</font></p>
 
         <pre class="thin"></pre>
