--- a/rss/index.html
+++ b/rss/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat cast member registration. &ndash;&nbsp;Inscription des membres de la distribution.</title>
+  <title>Animat Habitat rss.</title>
 
   <style>
     html { background-color: #333; }
