--- a/index/index.html
+++ b/index/index.html
@@ -42,6 +42,8 @@
       <div>
         <p><a href="../" title="Animat Habitat">Animat Habitat</a></p>
         <p>Animat Habitat <a href="../canon/" title="Animat Habitat canon.">Canon</a></p>
+        <p>Animat Habitat <a href="../champion/" title="Animat Habitat champions.">Champion</a></p>
+        <p>Animat Habitat <a href="../patron/" title="Animat Habitat patrons.">Patron</a></p>
 
         <h5 class="linebreak title"><font class="color-one">I&nbsp; White Elephant</font></h5>
         <p>Animat Habitat <a href="../scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">Scene One</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un</font></p>
@@ -71,10 +73,8 @@
         <p>Animat Habitat &ndash; Europe</p>
         <p>Animat Habitat &ndash; Oceania<font class="fr">&nbsp;&#92;&nbsp;Oc&eacute;anie</font></p>
 
-        <h5 class="letterhead title">Members<font class="fr">&nbsp;&#92;&nbsp;Membres</font></h5>
-        <p>Animat Habitat <a href="../champion/" title="Animat Habitat champions.">Champion</a></p>
-        <p>Animat Habitat <a href="../s/" title="Animat Habitat member handbook.">Member Handbook</a><font class="fr">&nbsp;&#92;&nbsp;Manuel des membres</font></p>
-        <p>Animat Habitat <a href="../patron/" title="Animat Habitat patrons.">Patron</a></p>
+        <!-- <h5 class="letterhead title">Members<font class="fr">&nbsp;&#92;&nbsp;Membres</font></h5>
+        <p>Animat Habitat <a href="../s/" title="Animat Habitat member handbook.">Member Handbook</a><font class="fr">&nbsp;&#92;&nbsp;Manuel des membres</font></p> -->
 
         <h5 class="letterhead title">Terms<font class="fr">&nbsp;&#92;&nbsp;Conditions</font></h5>
         <p>Animat Habitat <a href="../c/privacy-policy/" title="Animat Habitat privacy policy.">Privacy Policy</a><font class="fr">&nbsp;&#92;&nbsp;Politique de confidentialit&eacute;</font></p>
